Added Logo and Menu
Added:
- Logo component
- Menu component
- MenuItem component
- 'setCurrentMenuItem' and 'loadCurrentMenuItem' functions to sidebar controller

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,11 @@
 #app {
-  display: flex;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  border-top: 1px solid #e4e5e7;
+  flex-grow: 1;
 }
