--- a/src/components/TasksContainer/TasksContainer.module.css
+++ b/src/components/TasksContainer/TasksContainer.module.css
@@ -1,14 +1,19 @@
 .container {
   background-color: #fff;
   border: 1px solid #e4e5e7;
-  width: 400px;
+  /* width: 400px; */
   height: fit-content;
-  flex-shrink: 1;
+  flex: 0 1 400px;
+  position: relative;
+}
+
+.showed .showBtn {
+  transform: rotateZ(180deg);
 }
 
 .showed > .body {
   max-height: 500px;
-  transition: max-height 1s ease-in;
+  /* transition: max-height 1s ease-in; */
 }
 
 .header {
@@ -28,17 +33,21 @@
   background: none;
   border: none;
   width: 20px;
+  transform-origin: center center;
+  transition: transform 0.3s;
 }
 
 .showBtn > img {
+  display: block;
   width: 100%;
 }
 
 .body {
-  max-height: 0;
+  max-height: 0px;
   background-color: #fbfbfb;
   overflow: hidden;
-  transition: max-height 1s ease-out;
+  transition: max-height 0.7s;
+  /* position: relative; */
 }
 
 .tasks {
