--- a/src/containers/TasksPage/TasksPage.module.css
+++ b/src/containers/TasksPage/TasksPage.module.css
@@ -1,6 +1,13 @@
 .container {
   width: 100%;
   height: 100%;
-  display: flex;
+  /* display: flex; */
   padding: 10px;
+}
+
+.tasksContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
