--- a/src/modals/Modal/Modal.module.css
+++ b/src/modals/Modal/Modal.module.css
@@ -5,7 +5,6 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
   justify-content: center;
   align-items: center;
   /* display: none; */
@@ -14,10 +13,12 @@
 
 .bg.hide {
   opacity: 0;
+  display: none;
 }
 
 .bg.show {
   opacity: 1;
+  display: flex;
 }
 
 .modal {
