--- a/src/components/TasksContainer/TasksContainer.module.css
+++ b/src/components/TasksContainer/TasksContainer.module.css
@@ -24,7 +24,7 @@
   border-bottom: 1px solid #e4e5e7;
 }
 
-.projectTitle {
+.groupTitle {
   font-family: "Roboto", sans-serif;
   font-weight: normal;
 }
@@ -50,6 +50,26 @@
 .btn > img {
   display: block;
   width: 100%;
+}
+
+.addTaskBtn {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.875rem;
+  background: none;
+  border: 2px dashed rgb(128, 128, 128);
+  opacity: 0.4;
+}
+
+.addTaskBtn > img {
+  width: 20px;
+}
+
+.addTaskBtn > span {
+  margin-left: 10px;
 }
 
 .body {
