--- a/src/components/PrimaryFileInput/PrimaryFileInput.module.css
+++ b/src/components/PrimaryFileInput/PrimaryFileInput.module.css
@@ -10,12 +10,19 @@
 }
 
 .falseInput {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   color: #fff;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 500;
   font-size: 0.875rem;
   position: relative;
+}
+
+.falseInput > img {
+  height: 20px;
+  margin-bottom: 0;
+  margin-right: 5px;
 }
 
 .input {
