--- a/src/modals/ProjectModal/ProjectModal.module.css
+++ b/src/modals/ProjectModal/ProjectModal.module.css
@@ -1,3 +1,36 @@
+.imgPreview {
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 1s;
+  position: relative;
+}
+
+.imgPreview.showed {
+  max-height: 500px;
+}
+
+.imgPreview > img {
+  width: 100%;
+}
+
+.dropImg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.dropImg:hover {
+  opacity: 0.5;
+}
+
 .bodyContent {
   padding-bottom: 5px;
   padding-top: 20px;
