--- a/src/components/ProfileLink/ProfileLink.module.css
+++ b/src/components/ProfileLink/ProfileLink.module.css
@@ -1,6 +1,7 @@
 .profile {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .content {
@@ -28,6 +29,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background: none;
+  border: none;
 }
 
 .img > img {
@@ -36,25 +39,36 @@
   border-radius: 50%;
 }
 
-.circle {
+.menu {
+  min-width: 150px;
   position: absolute;
+  bottom: -110px;
+  right: 0;
+  z-index: 5;
+  background-color: #fff;
+  border: 1px solid #e4e5e7;
+  padding: 10px 20px;
+  display: none;
+}
+
+.menu.show {
   display: block;
-  width: 50px;
-  height: 50px;
-  transform: rotateZ(-90deg);
-  z-index: 1;
 }
 
-.circle > circle {
-  fill: none;
-  stroke: rgb(70, 70, 70);
-  stroke-width: 4px;
-  stroke-linecap: round;
-  stroke-dasharray: 500;
-  stroke-dashoffset: 500;
-  transition: stroke-dashoffset 1.5s;
+.link {
+  text-decoration: none;
+  color: #000;
+  font-family: "Roboto Condensed", sans-serif;
+  display: block;
+  padding: 10px;
+  opacity: 0.5;
 }
 
-.img:hover circle {
-  stroke-dashoffset: 0;
+.logout {
+  color: red;
+  font-weight: 600;
+}
+
+.link:hover {
+  opacity: 1;
 }
