--- a/front/src/components/ProfileLink/ProfileLink.module.css
+++ b/front/src/components/ProfileLink/ProfileLink.module.css
@@ -76,3 +76,21 @@
 .btns {
   margin-right: 30px;
 }
+
+.signIn {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+}
+
+.line {
+  margin: 0 5px;
+}
+
+.linkBtn {
+  background: none;
+  border: none;
+  color: #13dfc3;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1rem;
+}
